--- a/css/produtos.css
+++ b/css/produtos.css
@@ -164,7 +164,7 @@
     background-color: #004bb7;
   }
   .btn_outline {
-    background: transparent;
+    background: #128c7e;
     border: 2px solid #fff;
     color: #fff;
   }
