--- a/css/quem-somos.css
+++ b/css/quem-somos.css
@@ -36,6 +36,7 @@
     width: 100%;
     border-radius: 10px;
     object-fit: cover;
+    height: 400px;
   }
   
   /* === SECTION 2: HISTÓRIA / AUTORIDADE === */
