--- a/css/header-menu.css
+++ b/css/header-menu.css
@@ -62,7 +62,7 @@
 .btn_header_home {
   padding: 10px 24px;
   cursor: pointer;
-  background-color: #ff5000;
+  background-color: #128c7e;
   border: none;
   color: #fff;
   font-size: 1rem;
@@ -73,7 +73,7 @@
 }
 
 .btn_header_home:hover {
-  background-color: #e24600;
+  background-color: #075e54;
   transform: translateY(-2px);
 }
 
@@ -98,13 +98,14 @@
 }
 
 @media (max-width: 1100px) {
-  .btn_header_home {
-    display: none;
-  }
 
   #header {
     padding-left: 20px;
     padding-right: 20px;
+  }
+
+  .btn_header_home {
+    display: none;
   }
 
   #menu {
